--- a/example/index.html
+++ b/example/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <div>
-    <input type="text" id="urlInput" placeholder="url" />
+    <input type="text" id="urlInput" placeholder="Audio URL" />
     <button id="urlInputSubmit">Set</button>
   </div>
 
@@ -17,8 +17,8 @@
     <button id="pauseAudio" disabled>Pause audio</button>
     <button id="playAudio" disabled>Play/Resume audio</button>
     <button id="replayAudio" disabled>Replay audio</button>
-    <button id="next">Next</button>
-    <button id="previous">Previous</button>
+    <button id="next" disabled>Next</button>
+    <button id="previous" disabled>Previous</button>
 
     Playback rate <input id="playbackRateSlider" type="range" min="0" value="1" max="2" step="0.1" />
 
